--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write '**/*.{css,scss,html,ts,tsx}'"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
